--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,6 +6,10 @@ scrape_configs:
     static_configs:
       - targets: ['prometheus:9090']
 
+  - job_name: 'grafana'
+    static_configs:
+      - targets: ['grafana:3000']
+
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
@@ -13,4 +17,3 @@ scrape_configs:
   - job_name: 'loki'
     static_configs:
       - targets: ['loki:3100']
-
