--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -17,6 +17,9 @@ jobs:
            export NVM_DIR="$HOME/.nvm"
            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  
            nvm use 14
+           echo "Current PATH: $PATH"
+           echo "Node version: $(node -v)"
+           echo "NPM version: $(npm -v)"
            cd Full-Stack-Deployment/frontend
            git pull origin main
            npm install
