--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -14,12 +14,10 @@ jobs:
           port: ${{ secrets.PORT }}
 
           script: |
-           export NVM_DIR="$HOME/.nvm"
-           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  
-           nvm use 14
-           echo "Current PATH: $PATH"
-           echo "Node version: $(node -v)"
-           echo "NPM version: $(npm -v)"
+           export PATH="$HOME/.fnm:$PATH"
+           [ -s "$HOME/.fnm/fnm.sh" ] && \. "$HOME/.fnm/fnm.sh"
+           fnm install 14
+           fnm use 14
            cd Full-Stack-Deployment/frontend
            git pull origin main
            npm install
