--- a/backend/.env
+++ b/backend/.env
@@ -25,8 +25,8 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=db
+POSTGRES_SERVER=postgres
 POSTGRES_PORT=5432
-POSTGRES_DB=app
-POSTGRES_USER=app
-POSTGRES_PASSWORD=changethis123
+POSTGRES_DB=mydatabase
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
