--- a/.github/workflows/frontend2.yml
+++ b/.github/workflows/frontend2.yml
@@ -2,7 +2,7 @@ name: docker_image
 on: push
 jobs:
   build:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: checkout code
         uses: actions/checkout@v4
